# Derivercrabify

./: .gitignore  Cargo.toml  metadata.json  package-lock.json  package.json  release.ps1  vite.config.js
.github/workflows/: build-and-publish.yml  build-locale-updater.yml  update-locale.yml
docs/: guide.md
locale-updater/: Cargo.toml
locale-updater/src/: main.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: instances.rs  lib.rs  main.rs  mo.rs
src/routes/: +page.svelte
