[package]
name = "locale-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip"] }
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
polib = "0.3"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
zip = { version = "2", features = ["lzma"] }
aws-sdk-s3 = "1"
aws-config = "1"
tokio = { version = "1", features = ["full"] }
