[package]
name = "wowscn_derivercrabify"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "wowscn_derivercrabify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52"
quick-xml = { version = "0.36", features = ["serialize"] }
sha2 = "0.10"
hex = "0.4"
polib = "0.3"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip"] }
dirs = "5"
