[package]
name = "wowscn_derivercrabify"
version = "0.1.1"
description = "Use the language file from WoWs WorldWide to 'overwrite' the one in a CN360 WoWs client."
authors = ["LocalizedKorabli"]
edition = "2021"

[lib]
name = "wowscn_derivercrabify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52"
quick-xml = { version = "0.36", features = ["serialize"] }
gc-download = "0.1.3"
sha2 = "0.10"
hex = "0.4"
polib = "0.3"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "stream", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["fs", "io-util", "process"] }
futures-util = "0.3"
dirs = "5"

[profile.release]
strip = true
opt-level = 's'
lto = true
codegen-units = 1
panic = "abort"
